add notes to front-end

--- a/client/src/pages/Main.css
+++ b/client/src/pages/Main.css
@@ -30,3 +30,7 @@
     border-top-style: solid;
     border-bottom-style: solid;
 }
+.note{
+    border-top-style: solid;
+    border-bottom-style: solid;
+}
